bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:5: error: Boolean does not take parameters
  } else (vacation==true){
                         ^