bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if (weekday==true){
    return false
  } else (vacation==true){
    return true
  }
}